--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '25.0.0'
 
     defaultConfig {
-        applicationId "xyz.hexene.localvpn"
+        applicationId "com.juliansparber.vpnMITM"
         minSdkVersion 14
         targetSdkVersion 24
         versionCode 1
