--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
 
         <activity
             android:name=".UserAlertDialog"
-            android:theme="@android:style/Theme.Material.Light.Dialog.Alert"
+            android:theme="@style/noAnimTheme"
             android:launchMode="singleInstance"
             tools:targetApi="lollipop">
         </activity>
